added login and logout

--- a/static/i18n/uadmin/system.en.json
+++ b/static/i18n/uadmin/system.en.json
@@ -1,20 +1,27 @@
 {
   "Add New": "Add New",
+  "Apply Changes": "Apply Changes",
   "Are you sure you want to delete the selected": "Are you sure you want to delete the selected",
   "Cancel": "Cancel",
   "Change Password": "Change Password",
   "Close": "Close",
   "Confirm Delete": "Confirm Delete",
+  "Confirm Password": "Confirm Password",
   "Dashboard": "Dashboard",
   "Delete Selected": "Delete Selected",
   "Email Address": "Email Address",
+  "Enable 2-Factor Auth": "Enable 2-Factor Auth",
   "Excel": "Excel",
   "Filter": "Filter",
   "Icons designed by": "Icons designed by",
   "Language": "Language",
   "Logout": "Logout",
+  "New Password": "New Password",
+  "Old Password": "Old Password",
+  "Page Not Found": "Page Not Found",
   "Password": "Password",
   "Save": "Save",
+  "Save Changes": "Save Changes",
   "Save and Add Another": "Save and Add Another",
   "Save and Continue": "Save and Continue",
   "Search Dashboard e.g. item": "Search Dashboard e.g. item",
