adding additional models

--- a/static/i18n/uadmin/system.en.json
+++ b/static/i18n/uadmin/system.en.json
@@ -13,6 +13,7 @@
   "Enable 2-Factor Auth": "Enable 2-Factor Auth",
   "Excel": "Excel",
   "Filter": "Filter",
+  "History": "History",
   "Icons designed by": "Icons designed by",
   "Language": "Language",
   "Logout": "Logout",
