--- a/static/i18n/models/company.en.json
+++ b/static/i18n/models/company.en.json
@@ -1,8 +1,29 @@
 {
   "display_name": "Company",
   "fields": {
+    "Address": {
+      "display_name": "Address",
+      "help": "",
+      "pattern_msg": "",
+      "err_msg": {},
+      "Choices": {}
+    },
+    "Description": {
+      "display_name": "Description",
+      "help": "",
+      "pattern_msg": "",
+      "err_msg": {},
+      "Choices": {}
+    },
     "ID": {
       "display_name": "ID",
+      "help": "",
+      "pattern_msg": "",
+      "err_msg": {},
+      "Choices": {}
+    },
+    "Logo": {
+      "display_name": "Logo",
       "help": "",
       "pattern_msg": "",
       "err_msg": {},
