--- a/static/i18n/models/employee.en.json
+++ b/static/i18n/models/employee.en.json
@@ -15,6 +15,13 @@
       "err_msg": {},
       "Choices": {}
     },
+    "Department": {
+      "display_name": "Department",
+      "help": "",
+      "pattern_msg": "",
+      "err_msg": {},
+      "Choices": {}
+    },
     "Email": {
       "display_name": "Email",
       "help": "",
