--- a/static/i18n/uadmin/system.en.json
+++ b/static/i18n/uadmin/system.en.json
@@ -4,6 +4,7 @@
   "Are you sure you want to delete the selected": "Are you sure you want to delete the selected",
   "Cancel": "Cancel",
   "Change Password": "Change Password",
+  "Changes Successfully Applied to": "Changes Successfully Applied to",
   "Close": "Close",
   "Confirm Delete": "Confirm Delete",
   "Confirm Password": "Confirm Password",
@@ -15,6 +16,7 @@
   "Filter": "Filter",
   "History": "History",
   "Icons designed by": "Icons designed by",
+  "Info:": "Info:",
   "Language": "Language",
   "Logout": "Logout",
   "New Password": "New Password",
