--- a/static/i18n/models/employee.en.json
+++ b/static/i18n/models/employee.en.json
@@ -99,6 +99,13 @@
       "err_msg": {},
       "Choices": {}
     },
+    "UserID": {
+      "display_name": "User ID",
+      "help": "",
+      "pattern_msg": "",
+      "err_msg": {},
+      "Choices": {}
+    },
     "Username": {
       "display_name": "Username",
       "help": "",
