--- a/static/i18n/models/employee.en.json
+++ b/static/i18n/models/employee.en.json
@@ -120,6 +120,13 @@
       "err_msg": {},
       "Choices": {}
     },
+    "User": {
+      "display_name": "User",
+      "help": "",
+      "pattern_msg": "",
+      "err_msg": {},
+      "Choices": {}
+    },
     "UserID": {
       "display_name": "User ID",
       "help": "",
