--- a/static/i18n/uadmin/system.en.json
+++ b/static/i18n/uadmin/system.en.json
@@ -1,5 +1,6 @@
 {
   "Add New": "Add New",
+  "Any Date": "Any Date",
   "Apply Changes": "Apply Changes",
   "Are you sure you want to delete the selected": "Are you sure you want to delete the selected",
   "Cancel": "Cancel",
@@ -18,11 +19,13 @@
   "Icons designed by": "Icons designed by",
   "Info:": "Info:",
   "Language": "Language",
+  "Last Month": "Last Month",
   "Logout": "Logout",
   "New Password": "New Password",
   "Old Password": "Old Password",
   "Page Not Found": "Page Not Found",
   "Password": "Password",
+  "Past 7 Days": "Past 7 Days",
   "Save": "Save",
   "Save Changes": "Save Changes",
   "Save and Add Another": "Save and Add Another",
@@ -30,6 +33,9 @@
   "Search Dashboard e.g. item": "Search Dashboard e.g. item",
   "Settings": "Settings",
   "Shortcuts": "Shortcuts",
+  "This Month": "This Month",
+  "This Year": "This Year",
+  "Today": "Today",
   "Username": "Username",
   "email address associated with user account": "email address associated with user account",
   "forgot password": "forgot password",
