--- a/static/i18n/models/employee.en.json
+++ b/static/i18n/models/employee.en.json
@@ -168,6 +168,13 @@
       "pattern_msg": "",
       "err_msg": {},
       "Choices": {}
+    },
+    "Worksite": {
+      "display_name": "Worksite",
+      "help": "",
+      "pattern_msg": "",
+      "err_msg": {},
+      "Choices": {}
     }
   }
 }
