--- a/static/i18n/models/benefit.en.json
+++ b/static/i18n/models/benefit.en.json
@@ -14,6 +14,13 @@
       "pattern_msg": "",
       "err_msg": {},
       "Choices": {}
+    },
+    "Percentage": {
+      "display_name": "Percentage",
+      "help": "",
+      "pattern_msg": "",
+      "err_msg": {},
+      "Choices": {}
     }
   }
 }
